fixes on mobile UI

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   background-image: url("./assets/fondo.png");
   background-position: top center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   min-height: 100vh;
 }
 
